# Autobot

./: .gitignore  README.md  START_HERE_NEXT_CONTEXT.md
autobot/: __init__.py  cli.py  cli_model_helpers.py  cli_train_v4_helpers.py  dashboard_server.py
config/: backtest.yaml  base.yaml  features.yaml  features_v2.yaml  features_v3.yaml  features_v4.yaml  micro.yaml  model.yaml  risk.yaml  secrets.example.env  strategy.yaml  train.yaml  upbit.yaml
cpp/: CMakeLists.txt
cpp/src/executor/: CMakeLists.txt  auth_jwt.cpp  auth_jwt.h  grpc_server.cpp  grpc_server.h  main.cpp  order_manager.cpp  order_manager.h  rate_limiter.cpp  rate_limiter.h  upbit_rest.cpp  upbit_rest.h
cpp/src/executor/state/: executor_state_store.cpp  executor_state_store.h
cpp/src/executor/tests/: executor_unit_tests.cpp  fault_drills_tests.cpp  fault_injection_transport.cpp  fault_injection_transport.h  ws_keepalive_scheduler_tests.cpp  ws_private_parsers_tests.cpp
cpp/src/executor/upbit/: auth_jwt.cpp  auth_jwt.h  http_client.cpp  http_client.h  number_string.cpp  number_string.h  querystring.cpp  querystring.h  rate_limiter.cpp  rate_limiter.h  recovery_policy.cpp  recovery_policy.h  remaining_req.cpp  remaining_req.h  request_builder.cpp  request_builder.h  tif_policy.cpp  tif_policy.h  upbit_private.cpp  upbit_private.h  ws_keepalive_scheduler.cpp  ws_keepalive_scheduler.h  ws_private_client.cpp  ws_private_client.h  ws_private_parsers.cpp  ws_private_parsers.h
docs/: API_NOTES.md  BACKTEST_PAPER_LIVE_STRENGTHENING_BLUEPRINT_2026-03-25.md  BREAKER_AUDIT_2026-03-24.md  CHANGE_POLICY.md  CODEBASE_LIFECYCLE_AUDIT_2026-03-20.md  CODEX_MANDATORY_WORK_PRINCIPLES_2026-03-25.md  CODE_REVIEW_2026-03-18.md  CONFIG_SCHEMA.md  DATA_AND_FEATURE_PLATFORM_BLUEPRINT_2026-03-25.md  DYNAMIC_CONTINUATION_EXIT_DESIGN_2026-03-24.md  DYNAMIC_EXIT_RISK_RESEARCH_2026-03-23.md  EXECUTION_POLICY_VETO_REDESIGN_2026-03-23.md  EXIT_STATE_CONTRACT.md  FOUNDATIONAL_FAILURE_MODES_2026-03-23.md  FULLY_AUTOMATED_CHAMPION_CANDIDATE_OPERATING_CONTRACT_2026-03-24.md  INTEGRATED_STRONG_MODEL_SYSTEM_ROADMAP_2026-03-25.md  LIFECYCLE_AUDIT_2026-03-20.md  LIVE_EXECUTION_PARITY_REDESIGN.md  LIVE_PARITY_EXECUTION_SIMULATOR_DESIGN_2026-03-24.md  LIVE_RUNTIME_POSTMORTEM_2026-03-21.md  NEXT_CONTEXT_MANDATORY_EXECUTION_PROTOCOL_2026-03-25.md  OCI_SERVER_ACCESS_REFERENCE_2026-03-25.md  PNL_REALIZATION_FLOW.md  PROGRAM_RUNBOOK.md  README.md  REPLAY_LEGACY_CLEANUP_POLICY_2026-03-25.md  REPLAY_PLAN_2026-03-21.md  RISK_AND_LIVE_CONTROL_STRENGTHENING_BLUEPRINT_2026-03-25.md  RISK_CONTROL_SAFETY_LAYER_REDESIGN.md  ROADMAP.md  RUNBOOK_CONTROL_CENTER.md  RUNBOOK_LIVE.md  RUNTIME_EXECUTION_FINDINGS_AND_ACTION_PLAN_2026-03-23.md  RUNTIME_VIABILITY_AND_RUNTIME_SOURCE_HARDENING_PLAN_2026-04-06.md  SERVER_OPERATIONS_AND_DEPLOYMENT_AUTOMATION_BLUEPRINT_2026-03-25.md  SETTING_REFACTOR_GLOBAL_AUDIT_RULE_2026-04-13.md  SOURCE_PLANE_PRIMARY_DATA_CONTRACT_2026-04-14.md  TARGET_AUTOTRADING_ARCHITECTURE_2026-04-14.md  TF_5M_GLOBAL_IMPACT_MAP_2026-04-13.md  TRAINING_MODEL_STRENGTHENING_BLUEPRINT_2026-03-25.md  (+15 more)
proto/: autobot.proto
python/: requirements.txt
scripts/: AutobotCenter.cmd  adopt_v4_candidate_for_server.ps1  adopt_v5_candidate_for_server.ps1  autobot_center.ps1  build_live_submit_params.py  candidate_acceptance.ps1  candidate_acceptance_common.ps1  candidate_acceptance_evidence.ps1  candidate_acceptance_reporting.ps1  candidate_acceptance_runtime.ps1  candidate_acceptance_windows.ps1  check_pointer_consistency.ps1  check_server_preflight.ps1  cleanup_stale_live_v5_paper_alpha_processes.ps1  close_v5_train_ready_snapshot.ps1  daily_candidate_acceptance_for_server.ps1  daily_champion_challenger_v4_for_server.ps1  daily_champion_challenger_v5_for_server.ps1  daily_micro_pipeline.ps1  daily_micro_pipeline.sh  daily_micro_pipeline_for_server.ps1  daily_micro_scheduler.ps1  daily_parallel_acceptance_for_server.ps1  daily_rank_shadow_cycle_for_server.ps1  gen_proto_python.ps1  inspect_one_m_drop_top10.py  install_server_candles_api_refresh_service.ps1  install_server_daily_acceptance_service.ps1  install_server_daily_parallel_acceptance_service.ps1  install_server_daily_split_challenger_services.ps1  install_server_daily_v5_split_challenger_services.ps1  install_server_dashboard_service.ps1  install_server_data_platform_refresh_service.ps1  install_server_foundation_ingestion_services.ps1  install_server_live_execution_policy_service.ps1  install_server_live_runtime_service.ps1  install_server_market_state_v1_service.ps1  install_server_private_ws_archive_service.ps1  install_server_rank_shadow_service.ps1  install_server_raw_ticks_backfill_service.ps1  (+48 more)
tests/: test_ablation.py  test_adopt_v4_candidate_for_server.py  test_backfill_trade_candles_from_raw_ws.py  test_backtest_engine_cache.py  test_backtest_engine_integration.py  test_backtest_engine_micro_gate_integration.py  test_backtest_engine_micro_order_policy_integration.py  test_backtest_exchange.py  test_backtest_fill_model.py  test_backtest_loader.py  test_backtest_model_alpha_integration.py  test_canary_confidence_sequence.py  test_candidate_acceptance_backtest_cache.py  test_candidate_acceptance_certification_lane.py  test_candidate_acceptance_dependency_reuse.py  test_candidate_acceptance_duplicate_candidate.py  test_candidate_acceptance_model_ref_pinning.py  test_candidate_acceptance_powershell_arrays.py  test_candidate_acceptance_report_refresh.py  test_candidate_acceptance_runtime_coverage.py  test_candidate_acceptance_split_policy_holdout_days.py  test_candidate_acceptance_v5_dependency_inputs.py  test_candidate_canary_report.py  test_candle_collect_validate.py  test_candle_plan.py  test_check_server_preflight.py  test_cli_alpha_shortcuts.py  test_cli_daily_v4.py  test_cli_export_expert_table.py  test_cli_inspect_runtime_dataset.py  test_column_mapper.py  test_cpcv_lite.py  test_daily_candidate_acceptance_for_server.py  test_daily_champion_challenger_spawn_handling.py  test_daily_parallel_acceptance_for_server.py  test_daily_parallel_service_install.py  test_daily_split_service_install.py  (+197 more)
(+437 files in other folders)
